# DriveSingularity

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
configs/: simple_env_config.json  simple_straight.json
configs/resources/: crossroads2.json  osm.json  video.json
configs/resources/MediumScenario/: intersection221.json  intersection222.json  intersection224.json
configs/resources/SimpleScenario/: highway1.json  highway2.json  highway4.json  intersection1.json  intersection2.json  intersection4.json  offramp11.json  offramp12.json  offramp21.json  offramp22.json  offramp41.json  offramp42.json  onramp11.json  onramp12.json  onramp21.json  onramp22.json  onramp41.json  onramp42.json
examples/: multiprocess_train.py  rollout.py
include/DriveSingularity/Control/: Action.h  AgentVehicle.h  Control.h
include/DriveSingularity/Control/simple/: IDMVehicle.h
include/DriveSingularity/Engine/: Environment.h  Route.h
include/DriveSingularity/Math/: All.h  Collision.h  Constants.h  Interval.h  Obb.h  Random.h  Segment.h  Util.h  Vector.h
include/DriveSingularity/Render/: EnvironmentRenderer.h  RoadMapRenderer.h
include/DriveSingularity/RoadMap/: Common.h  Graph.h  RoadMap.h  RoadMapBuilder.h  Roads.h
include/DriveSingularity/Utils/: Creator.h  Events.h  Logger.h  VehicleGenerator.h
include/DriveSingularity/Vehicle/: Common.h  Vehicle.h
pyds/: README.md  engine.py  handlers.py  multiprocess_wrapper.py  utils.py
pyds/policy/: __init__.py  random.py
pyds/scenarios/: __init__.py  base.py  highway.py  simple.py
src/: CMakeLists.txt  simulator.cpp
src/Control/: AgentVehicle.cpp  Control.cpp
src/Control/simple/: IDMVehicle.cpp
src/Engine/: Environment.cpp  Route.cpp
src/Math/: Collision.cpp  Obb.cpp
src/Render/: CMakeLists.txt  EnvironmentRenderer.cpp  RoadMapRenderer.cpp
src/RoadMap/: Graph.cpp  RoadMap.cpp  RoadMapBuilder.cpp  Roads.cpp
src/Utils/: Events.cpp  Logger.cpp  VehicleGenerator.cpp
src/Vehicle/: Vehicle.cpp
